# DrawSomething

./: .gitignore  CMakeLists.txt  issues
client_application/: CMakeLists.txt
client_application/src/: Protocol.h  editor.cpp  main.cpp
client_application/src/core/: Rectangles.h
client_application/src/core/app/: Assets.h  Drawing.h
client_application/src/editor/ui/menus/editor/: Interface.cpp  Interface.h
client_application/src/editor/ui/menus/editor/components/texture_button/: TextureButton.h
client_application/src/editor/ui/menus/editor/components/viewport/: ViewportItem.h
client_application/src/game/: GameData.cpp  GameData.h
client_application/src/game/account/: Account.cpp  Account.h  OwnedColor.cpp  OwnedColor.h
client_application/src/game/game_info/: GameInfo.cpp  GameInfo.h  GameStats.h
client_application/src/network/: NetworkClient.cpp  NetworkClient.h
client_application/src/ui/: CommonUI.h  RenderPresets.cpp  RenderPresets.h
client_application/src/ui/components/element/: Button.cpp  Button.h  CheckBox.cpp  CheckBox.h  Frame.h  OverlayButton.cpp  ScrollFrame.cpp  ScrollFrame.h  Scrollable.h  TextBox.cpp  TextBox.h
client_application/src/ui/components/element/base/: Element.cpp  Element.h
client_application/src/ui/cursors/: Circular.cpp  Cursors.cpp
client_application/src/ui/menus/: FullscreenMenu.cpp  FullscreenMenu.h  HeaderFullscreenMenu.cpp  HeaderFullscreenMenu.h  ScreenMenu.cpp  ScreenMenu.h
client_application/src/ui/menus/auth/: AuthMenu.cpp
client_application/src/ui/menus/auth/components/: ScrollingBackground.h
client_application/src/ui/menus/confirmation/: ConfirmationScreen.cpp  ConfirmationScreen.h
client_application/src/ui/menus/export/: ExportMenu.cpp  ExportMenu.h
client_application/src/ui/menus/ingame/: IngameMenu.cpp  IngameMenu.h
client_application/src/ui/menus/ingame/components/: Canvas.cpp  Canvas.h  Header.cpp
client_application/src/ui/menus/ingame/components/color_selector/: ColorSelector.cpp  ColorSelector.h
client_application/src/ui/menus/ingame/components/panel/: GuessingBar.cpp  GuessingBar.h  Letter.cpp  LetterSlot.h  Panel.cpp
client_application/src/ui/menus/ingame/components/tool_selector/: BrushSizeButton.cpp  BrushSizeButton.h  ToolSelector.cpp  ToolSelector.h
client_application/src/ui/menus/intermission/: IntermissionMenu.cpp  IntermissionMenu.h
client_application/src/ui/menus/intermission/components/: MiniProfile.cpp  Scribbles.cpp
client_application/src/ui/menus/loading/: LoadingScreen.cpp
client_application/src/ui/menus/main/: MainMenu.cpp  MainMenu.h
client_application/src/ui/menus/main/admin/: AdminScreen.cpp  AdminScreen.h  UserRecord.cpp
client_application/src/ui/menus/main/components/: Connections.h  Header.cpp  Header.h  MainHeader.h  Profile.cpp  Profile.h  SettingsScreen.cpp  SettingsScreen.h
client_application/src/ui/menus/main/components/games/: CurrentGames.cpp
client_application/src/ui/menus/main/components/games/game/: Game.cpp  Game.h  Statistics.cpp  Statistics.h
client_application/src/ui/menus/main/games/: GamesScreen.cpp  GamesScreen.h
client_application/src/ui/menus/main/profile/: ProfileScreen.cpp  ProfileScreen.h
client_application/src/ui/menus/main/shop/: ShopScreen.cpp  ShopScreen.h
client_application/src/ui/menus/main/shop/bombs/: BombOffer.cpp  BombOffer.h
client_application/src/ui/menus/main/shop/bundle/: ColorBundle.cpp  ColorBundle.h  ColorView.cpp
client_application/src/ui/menus/picking/: PickingMenu.cpp  PickingMenu.h
client_application/src/ui/menus/picking/components/: WordOption.cpp  WordOption.h
client_application/src/ui/particles/particle/: FlyingParticle.h
client_application/src/ui/structures/visual_texture/: VisualTexture.cpp  VisualTexture.h
client_application/src/ui/structures/window_texture/: Sheet.cpp  WindowTexture.cpp  WindowTexture.h
client_application/src/windows_system/: WindowsSystem.cpp  WindowsSystem.h
server_application/: .gitignore  .secret_key  README.md  db.sqlite3  reinstall_venv.bat  run_server.bat  words_easy  words_hard  words_medium
server_application/configuration/: asgi.py  settings.py  urls.py  wsgi.py
server_application/custom_app/: apps.py  decorators.py  models.py  rules.py  urls.py  views.py
server_application/custom_app/middleware/: packet_id.py
server_application/custom_app/migrations/: 0001_initial.py  0002_user_admin_user_user_session_expiration_and_more.py  0003_user_coins_user_coins_earned_user_coins_spent_and_more.py  0004_user_activity_date_user_creation_date.py  0005_user_profile_picture.py  0006_remove_user_profile_picture.py  0007_game.py  0008_game_active_alter_game_creator_id_alter_game_party_a_and_more.py  0009_rename_creator_id_game_creator.py  0010_game_difficulty_game_turn_stage_game_word.py  0011_game_choice_easy_game_choice_hard_game_choice_medium_and_more.py  0012_recording.py  0013_user_games_played_user_rounds_played_and_more.py  0014_colorbundle_color.py  0015_colorbundle_price_alter_color_bundle.py  0016_user_profile_picture.py  0017_usercolorbundle.py  0018_user_deleted.py  0019_game_current_attempt_recording_attempt.py  0020_user_bombs.py
src/: main.cpp
src/client/: editor.cpp  main.cpp  test_client.cpp
src/client/core/: Application.cpp  Application.h  Rectangles.cpp  Rectangles.h
src/client/game/: GameData.cpp  GameData.h
src/client/network/: IClient.h  NetworkClient.cpp  NetworkClient.h
src/client/ui/: CommonUI.cpp  CommonUI.h  RenderPresets.cpp  RenderPresets.h
src/client/words/: Words.cpp  Words.h
src/core/: Application.cpp  Application.h  Strings.cpp  Vec2.inl
src/game/: GameData.cpp  GameData.h
src/game/account/: Account.cpp  Account.h
src/game/game_info/: GameInfo.cpp
src/network/: NetworkClient.cpp  NetworkClient.h
src/server/: main.cpp  test_client.cpp
src/server/network/: IServer.h
src/shared/: Protocol.h
src/shared/core/: Colors.cpp  Colors.h  Numbers.cpp  Numbers.h  Singleton.h  Strings.cpp  Strings.h  Vec2.h  Vec2.inl
src/shared/network/: Connection.h  Message.h  ThreadQueue.h
src/ui/: RenderPresets.h
(+216 files in other folders)
